--- a/css/mediaQuery.css
+++ b/css/mediaQuery.css
@@ -1,7 +1,7 @@
 @media (max-width: 1100px) {
     main {
-        width: 100%;
-        margin: 100px auto;
+        width: 100vw;
+        margin: 100px 0px;
     }
     
     main > section {
